vlib/v/checker/tests/init_literal.out
vlib/v/checker/tests/init_literal.vv:3:16: error: array `len` needs to be an int
    1 | i := 3
    2 | // must be int
    3 | _ = []int{len: 3.3}
      |                ~~~
    4 | _ = []int{cap: &i}
    5 | _ = chan int{cap: [i]}
vlib/v/checker/tests/init_literal.vv:4:16: error: array `cap` needs to be an int
    2 | // must be int
    3 | _ = []int{len: 3.3}
    4 | _ = []int{cap: &i}
      |                ^
    5 | _ = chan int{cap: [i]}
    6 |
vlib/v/checker/tests/init_literal.vv:5:19: error: channel `cap` needs to be an int
    3 | _ = []int{len: 3.3}
    4 | _ = []int{cap: &i}
    5 | _ = chan int{cap: [i]}
      |                   ~~~
    6 | 
    7 | // init
vlib/v/checker/tests/init_literal.vv:8:25: error: invalid array `init`: expected `int`, not `[]int`
    6 | 
    7 | // init
    8 | _ = []int{len: 1, init: [i]}
      |                         ~~~
    9 | _ = []int{len: 1, init: 'hi'}
vlib/v/checker/tests/init_literal.vv:9:25: error: invalid array `init`: expected `int`, not `string`
    7 | // init
    8 | _ = []int{len: 1, init: [i]}
    9 | _ = []int{len: 1, init: 'hi'}
      |                         ~~~~
