vlib/v/checker/tests/init_literal.vv
i := 3
// must be int
_ = []int{len: 3.3}
_ = []int{cap: &i}
_ = chan int{cap: [i]}

// init
_ = []int{len: 1, init: [i]}
_ = []int{len: 1, init: 'hi'}
